# nodepad-app

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: about-panel.tsx  ghost-panel.tsx  graph-area.tsx  graph-detail-panel.tsx  intro-modal.tsx  kanban-area.tsx  kanban-minimap.tsx  project-sidebar.tsx  status-bar.tsx  tile-card.tsx  tile-index.tsx  tiling-area.tsx  tiling-minimap.tsx  vim-input.tsx
lib/: ai-enrich.ts  export.ts
src/: App.test.tsx  App.tsx  app-shell.tsx  assistance-section.tsx  capture-bar.tsx  capture-section.tsx  cloud-consent-dialog.tsx  cloud-key-section.tsx  cloud-provider.ts  command-palette.tsx  committed-notes-section.tsx  enrichment-contracts.ts  enrichment-controller.test.ts  enrichment-controller.ts  escape-dismiss.tsx  escape-stack.ts  external-link.tsx  graph-layout.test.ts  graph-layout.ts  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_preferences.sql  0003_note_controls.sql  0004_labels_and_search.sql  0005_relationships.sql  0006_assistance_policy.sql  0007_cloud_consent.sql  0008_note_enrichment.sql  0009_synthesis.sql  0010_cloud_provider.sql
src-tauri/src/: archive.rs  backup.rs  cloud.rs  enrichment.rs  external_link.rs  lib.rs  main.rs  markdown_export.rs  ollama.rs  release_audit.rs  secrets.rs  synthesis.rs  thinking_graph.rs  url_metadata.rs  workspace.rs
src-tauri/src/backup/: tests.rs
(+39 files in other folders)
