[package]
name = "nodepad"
version = "0.1.0"
description = "A durable thinking workspace"
authors = ["Nodepad maintainers"]
edition = "2021"

[lib]
name = "nodepad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["net", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
